--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -43,6 +44,7 @@
   font-weight: bold;
   column-gap: 20px;
   row-gap: 10px;
+  
  
 }
 
@@ -51,12 +53,30 @@
   flex: 1 100%;
   
 }
-
+h1{
+  color: var(--Primary);
+}
 .header {
-  background: skyblue;
+  
   height: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+.left-header{
+  display:flex;
+  align-items: center;
+  padding: 20px;
+  gap:20px
+}
+.right-header{
+  display:flex;
+  align-items: center;
+  gap:20px
 }
 
+.hero {
+  background:blueviolet;
+}
 .footer {
   background: navy;
   height: 100px;
@@ -80,9 +100,10 @@
 
 @media all and (min-width: 800px) {
   .main    { flex: 5 0px; }
-  .aside { order: 1; } 
-  .main    { order: 2; }
-  .footer  { order: 3; }
+  .hero { order: 1; } 
+  .aside { order: 2; } 
+  .main    { order: 3; }
+  .footer  { order: 4; }
 }
 
 body {
